# Zword_ZwiftRide-to-BLE-Keyboard

./: .envrc  .gitignore  README.md  Taskfile.yml  platformio.ini  pyproject.toml
.github/workflows/: build.yml
src/: main.cpp
